--- a/Weather/app/build.gradle
+++ b/Weather/app/build.gradle
@@ -10,6 +10,9 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
+
+
     }
     buildTypes {
         release {
@@ -20,9 +23,11 @@ android {
 }
 
 dependencies {
-     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
+    compile 'com.android.support:support-v4:24.0.0-beta1'
+    compile project(':GraphView')
 }
 
